--- a/assets/pages/projects.html
+++ b/assets/pages/projects.html
@@ -48,13 +48,15 @@
                     <h3>Portfolio Website</h3>
                     <p>You can download thia webapp</p>
                     <div class="project-links">
-                         <a href="../apk/" download class="p-btn p-btn-dark">
+                         <a href="../apk/owais.apk" download class="p-btn p-btn-dark">
                             <i class="fa-solid fa-download"></i> Install
                         </a>
                         <a href="https://github.com/ahmad010709/Web-Project" class="p-btn p-btn-dark">
                             <i class="fab fa-github"></i> GitHub
                         </a>
-            
+            <a href="https://ahmad010709.github.io/Web-Project" class="p-btn p-btn-primary">
+                            <i class="fas fa-external-link-alt"></i> Live Preview
+                        </a>
                     </div>
                 </div>
             </div>
