--- a/assets/pages/contact.html
+++ b/assets/pages/contact.html
@@ -1,7 +1,6 @@
 <!DOCTYPE html><html lang="en"><head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link href='https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css' rel='stylesheet'>
     <title>A.Owais khan</title>
     <link rel="stylesheet" href="../css/style.css">
     <link rel="icon" href="../images/me.jpg">
@@ -40,7 +39,7 @@
             </div>
 
             <textarea name="message" cols="30" rows="10" placeholder="Your Message" required></textarea>
-            <input type="submit" value="Send Message" class="p-btn p-btn-primary">
+            <input type="submit" value="Send Message" class="p-btn ">
         </form>
     </section>
 
