--- a/assets/pages/courses-mysql.html
+++ b/assets/pages/courses-mysql.html
@@ -6,9 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>A.Owais khan - Courses</title>
     <link rel="icon" href="../images/me.jpg">
-    <link href='https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css' rel='stylesheet'>
     <link rel="stylesheet" href="../css/style.css">
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
 
 </head>
 
@@ -74,11 +72,11 @@
             <div class="video-grid">
 
                 <!-- Video Card  -->
-                <div class="video-card"
+                <div loading="lazy" class="video-card"
                     onclick="openVideo('https://www.youtube.com/embed/hlGoQC332VM?si=JNzJyUBAMMSqZMlG', 'SQL  Complete Course in 3 Hours  SQL One Shot using MySQL', 'Apna College' )">
                     <div class="thumbnail">
                         <iframe width="560" height="315"
-                            src="https://www.youtube.com/embed/hlGoQC332VM?si=JNzJyUBAMMSqZMlG" loading="lazy"
+                            src="https://www.youtube.com/embed/hlGoQC332VM?si=JNzJyUBAMMSqZMlG" 
                             title="YouTube video player" frameborder="0"
                             allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
                             referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
