--- a/assets/pages/courses-python.html
+++ b/assets/pages/courses-python.html
@@ -6,9 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>A.Owais khan - Courses</title>
     <link rel="icon" href="../images/me.jpg">
-    <link href='https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css' rel='stylesheet'>
     <link rel="stylesheet" href="../css/style.css">
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
 
 </head>
 
@@ -73,7 +71,7 @@
             <div class="video-grid">
 
                 <!-- Video Card  -->
-                <div class="video-card"
+                <div loading="lazy" class="video-card"
                     onclick="openVideo('https://www.youtube.com/embed/W1iXIiF5iMw?si=VnSaY3QueZYTdlu8', 'Python Class 1', 'Code with Kylie' )">
                     <div class="thumbnail">
                         <iframe width="560" height="315"
@@ -89,7 +87,7 @@
                     </div>
                 </div>
                 <!-- Video Card  -->
-                <div class="video-card"
+                <div loading="lazy" class="video-card"
                     onclick="openVideo('https://www.youtube.com/embed/_5CY-p0Qt4U?si=5kESF8VwzLLi37Hn', 'Python Class 2', 'Code with Kylie' )">
                     <div class="thumbnail">
                         <iframe width="560" height="315"
@@ -105,7 +103,7 @@
                     </div>
                 </div>
                 <!-- Video Card  -->
-                <div class="video-card"
+                <div loading="lazy" class="video-card"
                     onclick="openVideo('https://www.youtube.com/embed/UWKx5LKyduE?si=hST5OpqpxosHaYs5', 'Python Class 3', 'Code with Kylie' )">
                     <div class="thumbnail">
                         <iframe width="560" height="315"
@@ -121,7 +119,7 @@
                     </div>
                 </div>
                 <!-- Video Card  -->
-                <div class="video-card"
+                <div loading="lazy" class="video-card"
                     onclick="openVideo('https://www.youtube.com/embed/_MFw95d49ok?si=ljas4z_3lJ31Gy_L', 'Python Class 4', 'Code with Kylie' )">
                     <div class="thumbnail">
                         <iframe width="560" height="315"
@@ -137,11 +135,11 @@
                     </div>
                 </div>
                 <!-- Video Card  -->
-                <div class="video-card"
+                <div loading="lazy" class="video-card"
                     onclick="openVideo('https://www.youtube.com/embed/O69N6Gk3eaw?si=XFu7rpNcHEF1Wd-Q', 'Python Class 5', 'Code with Kylie' )">
                     <div class="thumbnail">
                         <iframe width="560" height="315"
-                            src="https://www.youtube.com/embed/O69N6Gk3eaw?si=XFu7rpNcHEF1Wd-Q" loading="lazy"
+                            src="https://www.youtube.com/embed/O69N6Gk3eaw?si=XFu7rpNcHEF1Wd-Q" 
                             title="YouTube video player" frameborder="0"
                             allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
                             referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
@@ -153,11 +151,11 @@
                     </div>
                 </div>
                 <!-- Video Card  -->
-                <div class="video-card"
+                <div loading="lazy" class="video-card"
                     onclick="openVideo('https://www.youtube.com/embed/BPdyZpXW9F8?si=6G2HBF9gUz9S9P_H', 'Python Class 6', 'Code with Kylie' )">
                     <div class="thumbnail">
                         <iframe width="560" height="315"
-                            src="https://www.youtube.com/embed/BPdyZpXW9F8?si=6G2HBF9gUz9S9P_H" loading="lazy"
+                            src="https://www.youtube.com/embed/BPdyZpXW9F8?si=6G2HBF9gUz9S9P_H" 
                             title="YouTube video player" frameborder="0"
                             allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
                             referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
@@ -169,11 +167,11 @@
                     </div>
                 </div>
                 <!-- Video Card  -->
-                <div class="video-card"
+                <div loading="lazy" class="video-card"
                     onclick="openVideo('https://www.youtube.com/embed/WRI4fXDIXWM?si=xmAzaKWXyDbzkYMb', 'Python Class 7', 'Code with Kylie' )">
                     <div class="thumbnail">
                         <iframe width="560" height="315"
-                            src="https://www.youtube.com/embed/WRI4fXDIXWM?si=xmAzaKWXyDbzkYMb" loading="lazy"
+                            src="https://www.youtube.com/embed/WRI4fXDIXWM?si=xmAzaKWXyDbzkYMb" 
                             title="YouTube video player" frameborder="0"
                             allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
                             referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
@@ -185,11 +183,11 @@
                     </div>
                 </div>
                 <!-- Video Card  -->
-                <div class="video-card"
+                <div loading="lazy" class="video-card"
                     onclick="openVideo('https://www.youtube.com/embed/ZsRMQHbx6Xc?si=azLR6cpwzcGVBm7b', 'Python Class 8', 'Code with Kylie' )">
                     <div class="thumbnail">
                         <iframe width="560" height="315"
-                            src="https://www.youtube.com/embed/ZsRMQHbx6Xc?si=azLR6cpwzcGVBm7b" loading="lazy"
+                            src="https://www.youtube.com/embed/ZsRMQHbx6Xc?si=azLR6cpwzcGVBm7b" 
                             title="YouTube video player" frameborder="0"
                             allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
                             referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
@@ -201,11 +199,11 @@
                     </div>
                 </div>
                 <!-- Video Card  -->
-                <div class="video-card"
+                <div loading="lazy" class="video-card"
                     onclick="openVideo('https://www.youtube.com/embed/C2QfkDcQ5MU?si=uZoHYrp8sRlnSzp3', 'Python Class 9', 'Code with Kylie' )">
                     <div class="thumbnail">
                         <iframe width="560" height="315"
-                            src="https://www.youtube.com/embed/C2QfkDcQ5MU?si=uZoHYrp8sRlnSzp3" loading="lazy"
+                            src="https://www.youtube.com/embed/C2QfkDcQ5MU?si=uZoHYrp8sRlnSzp3" 
                             title="YouTube video player" frameborder="0"
                             allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
                             referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
@@ -217,11 +215,11 @@
                     </div>
                 </div>
                 <!-- Video Card  -->
-                <div class="video-card"
+                <div loading="lazy" class="video-card"
                     onclick="openVideo('https://www.youtube.com/embed/C2QfkDcQ5MU?si=SJqQnAJlddjq-3bU', 'Python Class 10', 'Code with Kylie' )">
                     <div class="thumbnail">
                         <iframe width="560" height="315"
-                            src="https://www.youtube.com/embed/C2QfkDcQ5MU?si=SJqQnAJlddjq-3bU" loading="lazy"
+                            src="https://www.youtube.com/embed/C2QfkDcQ5MU?si=SJqQnAJlddjq-3bU" 
                             title="YouTube video player" frameborder="0"
                             allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
                             referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
@@ -233,11 +231,11 @@
                     </div>
                 </div>
                 <!-- Video Card  -->
-                <div class="video-card"
+                <div loading="lazy" class="video-card"
                     onclick="openVideo('https://www.youtube.com/embed/GGdmIL85qos?si=luOnYPpnGYpoddmm', 'Python Class 11', 'Code with Kylie' )">
                     <div class="thumbnail">
                         <iframe width="560" height="315"
-                            src="https://www.youtube.com/embed/GGdmIL85qos?si=luOnYPpnGYpoddmm" loading="lazy"
+                            src="https://www.youtube.com/embed/GGdmIL85qos?si=luOnYPpnGYpoddmm" 
                             title="YouTube video player" frameborder="0"
                             allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
                             referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
@@ -249,11 +247,11 @@
                     </div>
                 </div>
                 <!-- Video Card  -->
-                <div class="video-card"
+                <div loading="lazy" class="video-card"
                     onclick="openVideo('https://www.youtube.com/embed/68YPgQE_zm4?si=oKxx_l6ZpfbysYnk', 'Python Class 12', 'Code with Kylie' )">
                     <div class="thumbnail">
                         <iframe width="560" height="315"
-                            src="https://www.youtube.com/embed/68YPgQE_zm4?si=oKxx_l6ZpfbysYnk" loading="lazy"
+                            src="https://www.youtube.com/embed/68YPgQE_zm4?si=oKxx_l6ZpfbysYnk" 
                             title="YouTube video player" frameborder="0"
                             allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
                             referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
@@ -265,11 +263,11 @@
                     </div>
                 </div>
                 <!-- Video Card  -->
-                <div class="video-card"
+                <div loading="lazy" class="video-card"
                     onclick="openVideo('https://www.youtube.com/embed/GdBV4irqOd8?si=z_A_skXLSVkc2jSg', 'Python Class 13', 'Code with Kylie' )">
                     <div class="thumbnail">
                         <iframe width="560" height="315"
-                            src="https://www.youtube.com/embed/GdBV4irqOd8?si=z_A_skXLSVkc2jSg" loading="lazy"
+                            src="https://www.youtube.com/embed/GdBV4irqOd8?si=z_A_skXLSVkc2jSg" 
                             title="YouTube video player" frameborder="0"
                             allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
                             referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
@@ -281,11 +279,11 @@
                     </div>
                 </div>
                 <!-- Video Card  -->
-                <div class="video-card"
+                <div loading="lazy" class="video-card"
                     onclick="openVideo('https://www.youtube.com/embed/gGukPkjBDdo?si=Xw3QCh4zXByMnpLl', 'Python Class 14', 'Code with Kylie' )">
                     <div class="thumbnail">
                         <iframe width="560" height="315"
-                            src="https://www.youtube.com/embed/gGukPkjBDdo?si=Xw3QCh4zXByMnpLl" loading="lazy"
+                            src="https://www.youtube.com/embed/gGukPkjBDdo?si=Xw3QCh4zXByMnpLl" 
                             title="YouTube video player" frameborder="0"
                             allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
                             referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
@@ -297,11 +295,11 @@
                     </div>
                 </div>
                 <!-- Video Card  -->
-                <div class="video-card"
+                <div loading="lazy" class="video-card"
                     onclick="openVideo('https://www.youtube.com/embed/RF26NjCUNvs?si=qg114TNUK2VQBYvi', 'Python Class 15', 'Code with Kylie' )">
                     <div class="thumbnail">
                         <iframe width="560" height="315"
-                            src="https://www.youtube.com/embed/RF26NjCUNvs?si=qg114TNUK2VQBYvi" loading="lazy"
+                            src="https://www.youtube.com/embed/RF26NjCUNvs?si=qg114TNUK2VQBYvi" 
                             title="YouTube video player" frameborder="0"
                             allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
                             referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
@@ -313,11 +311,11 @@
                     </div>
                 </div>
                 <!-- Video Card  -->
-                <div class="video-card"
+                <div loading="lazy" class="video-card"
                     onclick="openVideo('https://www.youtube.com/embed/M-0LZH7KHkQ?si=ZARlHx3_xuJOA4Ij', 'Python Class 16', 'Code with Kylie' )">
                     <div class="thumbnail">
                         <iframe width="560" height="315"
-                            src="https://www.youtube.com/embed/M-0LZH7KHkQ?si=ZARlHx3_xuJOA4Ij" loading="lazy"
+                            src="https://www.youtube.com/embed/M-0LZH7KHkQ?si=ZARlHx3_xuJOA4Ij" 
                             title="YouTube video player" frameborder="0"
                             allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
                             referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
