--- a/assets/pages/courses.html
+++ b/assets/pages/courses.html
@@ -6,10 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>A.Owais khan - Courses</title>
     <link rel="icon" href="../images/me.jpg">
-    <link href='https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css' rel='stylesheet'>
     <link rel="stylesheet" href="../css/style.css">
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
-
 </head>
 
 <body>
@@ -75,11 +72,11 @@
             <div class="video-grid">
 
                 <!-- Video Card  -->
-                <div class="video-card"
+                <div loading="lazy" class="video-card"
                     onclick="openVideo('https://www.youtube.com/embed/9cmy6AK3IBA?si=mAxHAhWNygYYCVTX', 'Web Class 1', 'Sheryians Coding School' )">
                     <div class="thumbnail">
                         <iframe width="560" height="315"
-                            src="https://www.youtube.com/embed/9cmy6AK3IBA?si=mAxHAhWNygYYCVTX" loading="lazy"
+                            src="https://www.youtube.com/embed/9cmy6AK3IBA?si=mAxHAhWNygYYCVTX" 
                             title="YouTube video player" frameborder="0"
                             allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
                             referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
@@ -91,11 +88,11 @@
                     </div>
                 </div>
                 <!-- Video Card  -->
-                <div class="video-card"
+                <div loading="lazy" class="video-card"
                     onclick="openVideo('https://www.youtube.com/embed/L9qixi858Ag?si=Tt2tqChF66OG29zc', 'Unreal Engine Class 1','none' )">
                     <div class="thumbnail">
                         <iframe width="560" height="315"
-                            src="https://www.youtube.com/embed/L9qixi858Ag?si=Tt2tqChF66OG29zc" loading="lazy"
+                            src="https://www.youtube.com/embed/L9qixi858Ag?si=Tt2tqChF66OG29zc" 
                             title="YouTube video player" frameborder="0"
                             allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
                             referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
@@ -107,11 +104,11 @@
                     </div>
                 </div>
                 <!-- Video Card  -->
-                <div class="video-card"
+                <div loading="lazy" class="video-card"
                     onclick="openVideo('https://www.youtube.com/embed/W1iXIiF5iMw?si=VnSaY3QueZYTdlu8', 'Python Class 1', 'Code with Kylie' )">
                     <div class="thumbnail">
                         <iframe width="560" height="315"
-                            src="https://www.youtube.com/embed/W1iXIiF5iMw?si=VnSaY3QueZYTdlu8" loading="lazy"
+                            src="https://www.youtube.com/embed/W1iXIiF5iMw?si=VnSaY3QueZYTdlu8" 
                             title="YouTube video player" frameborder="0"
                             allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
                             referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
@@ -123,11 +120,11 @@
                     </div>
                 </div>
                 <!-- Video Card  -->
-                <div class="video-card"
+                <div loading="lazy" class="video-card"
                     onclick="openVideo('https://www.youtube.com/embed/hlGoQC332VM?si=JNzJyUBAMMSqZMlG', 'SQL  Complete Course in 3 Hours  SQL One Shot using MySQL', 'Apna College' )">
                     <div class="thumbnail">
                         <iframe width="560" height="315"
-                            src="https://www.youtube.com/embed/hlGoQC332VM?si=JNzJyUBAMMSqZMlG" loading="lazy"
+                            src="https://www.youtube.com/embed/hlGoQC332VM?si=JNzJyUBAMMSqZMlG" 
                             title="YouTube video player" frameborder="0"
                             allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
                             referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
@@ -138,11 +135,11 @@
                     </div>
                 </div>
                 <!-- Video Card -->
-                <div class="video-card"
+                <div loading="lazy" class="video-card"
                     onclick="openVideo('https://www.youtube.com/embed/ihc83ldGxy8?si=XMH6xCnPJ0VhmEvu', 'Game Hacking Class 1 ','none' )">
                     <div class="thumbnail">
                         <iframe width="560" height="315"
-                            src="https://www.youtube.com/embed/ihc83ldGxy8?si=XMH6xCnPJ0VhmEvu" loading="lazy"
+                            src="https://www.youtube.com/embed/ihc83ldGxy8?si=XMH6xCnPJ0VhmEvu" 
                             title="YouTube video player" frameborder="0"
                             allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
                             referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
