--- a/assets/pages/projects.html
+++ b/assets/pages/projects.html
@@ -25,7 +25,9 @@
             </nav>
         </header>
 
-    <div class="page-spacer"></div>
+         <div class="page-spacer">
+
+        </div>
 
 
   <!-- Project Section -->
@@ -38,50 +40,45 @@
 
         <div class="projects-grid">
 
-            
             <!-- Portfolio Website -->
             <div class="project-card">
                 <div class="project-image">
-                    <img src="../images/web.png" >
+                    <img src="../images/web.png" alt="">
                 </div>
                 <div class="project-content">
                     <h3>Portfolio Website</h3>
                     <p>You can download thia webapp</p>
                     <div class="project-links">
-                         <a href="../apk/owais.apk" download class="p-btn p-btn-dark">
-                            <i class="fa-solid fa-download"></i> Install
+                        <a href="../apk/owais.apk" download class="p-btn ">
+                            <img src="../SVG/download-icon.svg" alt="">Install
                         </a>
-                        <a href="https://github.com/ahmad010709/Web-Project" class="p-btn p-btn-dark">
-                            <i class="fab fa-github"></i> GitHub
+                        <a href="https://github.com/ahmad010709/Web-Project" class="p-btn "><img src="../SVG/github-icon.svg" alt=""> GitHub
                         </a>
-            <a href="https://ahmad010709.github.io/Web-Project" class="p-btn p-btn-primary">
-                            <i class="fas fa-external-link-alt"></i> Live Preview
-                        </a>
-                    </div>
-                </div>
-            </div>
-            <!-- Chess Game -->
-            <div class="project-card">
-                <div class="project-image">
-                    <img src="../images/chess game.png" >
-                </div>
-                <div class="project-content">
-                    <h3>Chess Game</h3>
-                    <p>You can play this game with robot and fiends</p>
-                    <div class="project-links">
-                        <a href="../apk/chess.apk" download class="p-btn p-btn-dark">
-                            <i download class="fa-solid fa-download"></i> Install
-                        </a>
-                        <a href="https://github.com/ahmad010709/ChessGame" class="p-btn p-btn-dark">
-                            <i class="fab fa-github"></i> GitHub
-                        </a>
-                        <a href="https://chess-game-beryl-seven.vercel.app" class="p-btn p-btn-primary">
-                            <i class="fas fa-external-link-alt"></i> Live Preview
+                       <a href="https://ahmad010709.github.io/Web-Project" class="p-btn "><img src="../SVG/live-preview-svgrepo-com.svg" alt=""> Live Preview
                         </a>
                     </div>
                 </div>
             </div>
 
+
+            <!-- Chess Game -->
+            <div class="project-card">
+                <div class="project-image">
+                    <img src="../images/chess game.png">
+                </div>
+                <div class="project-content">
+                    <h3>Chess Game</h3>
+                    <p>You can play this game with robot and fiends</p>
+                    <div class="project-links">
+                        <a href="../apk/chess.apk" download class="p-btn "><img src="../SVG/download-icon.svg" alt=""> Install
+                        </a>
+                        <a href="https://github.com/ahmad010709/ChessGame" class="p-btn "><img src="../SVG/github-icon.svg" alt="">GitHub
+                        </a>
+                        <a href="https://chess-game-beryl-seven.vercel.app" class="p-btn "><img src="../SVG/live-preview-svgrepo-com.svg" alt=""> Live Preview
+                        </a>
+                    </div>
+                </div>
+            </div>
 
             <!-- Cosmetic Ai  -->
             <div class="project-card">
@@ -92,20 +89,18 @@
                     <h3>Cosmetic Ai</h3>
                     <p>You can upload name or photo of the cosmetic . this app give you info about that product.</p>
                     <div class="project-links">
-                         <a href="../apk/cosmetic.apk" download class="p-btn p-btn-dark">
-                            <i class="fa-solid fa-download"></i> Install
+                        <a href="../apk/cosmetic.apk" download class="p-btn "><img src="../SVG/download-icon.svg" alt="">Install
                         </a>
-                        <a href="https://github.com/ahmad010709/cosmetic-ai-insight" class="p-btn p-btn-dark">
-                            <i class="fab fa-github"></i> GitHub
+                        <a href="https://github.com/ahmad010709/cosmetic-ai-insight" class="p-btn "><img src="../SVG/github-icon.svg" alt="">GitHub
                         </a>
-                        <a href="https://cosmetic-ai-insight.vercel.app" class="p-btn p-btn-primary">
-                            <i class="fas fa-external-link-alt"></i> Live Preview
+                        <a href="https://cosmetic-ai-insight.vercel.app" class="p-btn "><img src="../SVG/live-preview-svgrepo-com.svg" alt=""> Live Preview
                         </a>
                     </div>
                 </div>
             </div>
         </div>
     </div>
+
     <!-- ads social bar link -->
     <script type='text/javascript'
         src='//pl27428749.profitableratecpm.com/1b/00/e9/1b00e9b611843a363e841a02a1648720.js'></script>
