--- a/assets/pages/watch.html
+++ b/assets/pages/watch.html
@@ -7,8 +7,6 @@
     <title>Watch Video</title>
     <link rel="icon" href="../images/me.jpg">
     <link rel="stylesheet" href="../css/style.css">
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
-
 </head>
 
 <body>
@@ -22,7 +20,7 @@
 
         <nav class="navbar">
             <a href="../../index.html">Home</a>
-            <a href="assets/pages/documentation.html">Documentation</a>
+            <a href="documentation.html">Documentation</a>
             <a href="about.html">About</a>
             <a href="projects.html">Projects</a>
             <a href="courses.html">Courses</a>
@@ -40,9 +38,7 @@
             </div>
         </div>
         <div class="navbar-right">
-            <button class="home-btn" onclick="history.back()">
-                <!-- <i class="fas fa-home"></i> -->
-                X</button>
+            <img class="svg" onclick="history.back()" src="../SVG/close-line-icon.svg" alt="">
         </div>
     </div>
 
@@ -98,11 +94,11 @@
         <div class="video-grid">
 
             <!-- Video Card  -->
-            <div class="video-card"
+            <div loading="lazy" class="video-card"
                 onclick="openVideo('https://www.youtube.com/embed/9cmy6AK3IBA?si=mAxHAhWNygYYCVTX', 'Web Class 1', 'Sheryians Coding School' )">
                 <div class="thumbnail">
                     <iframe width="560" height="315" src="https://www.youtube.com/embed/9cmy6AK3IBA?si=mAxHAhWNygYYCVTX"
-                        loading="lazy" title="YouTube video player" frameborder="0"
+                         title="YouTube video player" frameborder="0"
                         allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
                         referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
 
@@ -113,11 +109,11 @@
                 </div>
             </div>
             <!-- Video Card  -->
-            <div class="video-card"
+            <div loading="lazy" class="video-card"
                 onclick="openVideo('https://www.youtube.com/embed/L9qixi858Ag?si=Tt2tqChF66OG29zc', 'Unreal Engine Class 1','none' )">
                 <div class="thumbnail">
                     <iframe width="560" height="315" src="https://www.youtube.com/embed/L9qixi858Ag?si=Tt2tqChF66OG29zc"
-                        loading="lazy" title="YouTube video player" frameborder="0"
+                         title="YouTube video player" frameborder="0"
                         allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
                         referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
 
@@ -128,11 +124,11 @@
                 </div>
             </div>
             <!-- Video Card  -->
-            <div class="video-card"
+            <div loading="lazy" class="video-card"
                 onclick="openVideo('https://www.youtube.com/embed/W1iXIiF5iMw?si=VnSaY3QueZYTdlu8', 'Python Class 1', 'Code with Kylie' )">
                 <div class="thumbnail">
                     <iframe width="560" height="315" src="https://www.youtube.com/embed/W1iXIiF5iMw?si=VnSaY3QueZYTdlu8"
-                        loading="lazy" title="YouTube video player" frameborder="0"
+                         title="YouTube video player" frameborder="0"
                         allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
                         referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
 
@@ -143,11 +139,11 @@
                 </div>
             </div>
             <!-- Video Card  -->
-            <div class="video-card"
+            <div loading="lazy" class="video-card"
                 onclick="openVideo('https://www.youtube.com/embed/hlGoQC332VM?si=JNzJyUBAMMSqZMlG', 'SQL  Complete Course in 3 Hours  SQL One Shot using MySQL', 'Apna College' )">
                 <div class="thumbnail">
                     <iframe width="560" height="315" src="https://www.youtube.com/embed/hlGoQC332VM?si=JNzJyUBAMMSqZMlG"
-                        loading="lazy" title="YouTube video player" frameborder="0"
+                         title="YouTube video player" frameborder="0"
                         allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
                         referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
                 </div>
@@ -157,11 +153,11 @@
                 </div>
             </div>
             <!-- Video Card -->
-            <div class="video-card"
+            <div loading="lazy" class="video-card"
                 onclick="openVideo('https://www.youtube.com/embed/ihc83ldGxy8?si=XMH6xCnPJ0VhmEvu', 'Game Hacking Class 1 ','none' )">
                 <div class="thumbnail">
                     <iframe width="560" height="315" src="https://www.youtube.com/embed/ihc83ldGxy8?si=XMH6xCnPJ0VhmEvu"
-                        loading="lazy" title="YouTube video player" frameborder="0"
+                         title="YouTube video player" frameborder="0"
                         allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
                         referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
 
