--- a/assets/pages/courses-game-hacking.html
+++ b/assets/pages/courses-game-hacking.html
@@ -6,9 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>A.Owais khan - Courses</title>
     <link rel="icon" href="../images/me.jpg">
-    <link href='https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css' rel='stylesheet'>
     <link rel="stylesheet" href="../css/style.css">
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
 
 </head>
 
@@ -72,11 +70,11 @@
             <div class="video-grid">
 
                 <!-- Video Card -->
-                <div class="video-card"
+                <div loading="lazy" class="video-card"
                     onclick="openVideo('https://www.youtube.com/embed/ihc83ldGxy8?si=XMH6xCnPJ0VhmEvu', 'Game Hacking Class 1 ','none' )">
                     <div class="thumbnail">
                         <iframe width="560" height="315"
-                            src="https://www.youtube.com/embed/ihc83ldGxy8?si=XMH6xCnPJ0VhmEvu" loading="lazy"
+                            src="https://www.youtube.com/embed/ihc83ldGxy8?si=XMH6xCnPJ0VhmEvu" 
                             title="YouTube video player" frameborder="0"
                             allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
                             referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
@@ -91,11 +89,11 @@
 
 
                 <!-- Video Card -->
-                <div class="video-card"
+                <div loading="lazy" class="video-card"
                     onclick="openVideo('https://www.youtube.com/embed/YU_7lTW0km4?si=SClIt6FbsX0Lbmu3', 'Game Hacking Class 2','none' )">
                     <div class="thumbnail">
                         <iframe width="560" height="315"
-                            src="https://www.youtube.com/embed/YU_7lTW0km4?si=SClIt6FbsX0Lbmu3" loading="lazy"
+                            src="https://www.youtube.com/embed/YU_7lTW0km4?si=SClIt6FbsX0Lbmu3" 
                             title="YouTube video player" frameborder="0"
                             allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
                             referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
@@ -109,11 +107,11 @@
 
 
                 <!-- Video Card -->
-                <div class="video-card"
+                <div loading="lazy" class="video-card"
                     onclick="openVideo('https://www.youtube.com/embed/ac42uCGM6cQ?si=DAPjgU47HBm7QHod', 'Game Hacking Class 3','none' )">
                     <div class="thumbnail">
                         <iframe width="560" height="315"
-                            src="https://www.youtube.com/embed/ac42uCGM6cQ?si=DAPjgU47HBm7QHod" loading="lazy"
+                            src="https://www.youtube.com/embed/ac42uCGM6cQ?si=DAPjgU47HBm7QHod" 
                             title="YouTube video player" frameborder="0"
                             allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
                             referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
@@ -128,11 +126,11 @@
 
 
                 <!-- Video Card -->
-                <div class="video-card"
+                <div loading="lazy" class="video-card"
                     onclick="openVideo('https://www.youtube.com/embed/kMlU7C_hNi4?si=vKU0WzERNUO3_qSR', 'Game Hacking Class 4','none' )">
                     <div class="thumbnail">
                         <iframe width="560" height="315"
-                            src="https://www.youtube.com/embed/kMlU7C_hNi4?si=vKU0WzERNUO3_qSR" loading="lazy"
+                            src="https://www.youtube.com/embed/kMlU7C_hNi4?si=vKU0WzERNUO3_qSR" 
                             title="YouTube video player" frameborder="0"
                             allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
                             referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
@@ -148,11 +146,11 @@
 
 
                 <!-- Video Card -->
-                <div class="video-card"
+                <div loading="lazy" class="video-card"
                     onclick="openVideo('https://www.youtube.com/embed/1xyDvXF23qM?si=0ysmP6DS1FEfbFmy', 'Game Hacking Class 5','none' )">
                     <div class="thumbnail">
                         <iframe width="560" height="315"
-                            src="https://www.youtube.com/embed/1xyDvXF23qM?si=0ysmP6DS1FEfbFmy" loading="lazy"
+                            src="https://www.youtube.com/embed/1xyDvXF23qM?si=0ysmP6DS1FEfbFmy" 
                             title="YouTube video player" frameborder="0"
                             allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
                             referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
@@ -166,11 +164,11 @@
 
 
                 <!-- Video Card -->
-                <div class="video-card"
+                <div loading="lazy" class="video-card"
                     onclick="openVideo('https://www.youtube.com/embed/2Co9xbzW888?si=xCDMEK3Br9RnTX5Z', 'Game Hacking Class 6','none' )">
                     <div class="thumbnail">
                         <iframe width="560" height="315"
-                            src="https://www.youtube.com/embed/2Co9xbzW888?si=xCDMEK3Br9RnTX5Z" loading="lazy"
+                            src="https://www.youtube.com/embed/2Co9xbzW888?si=xCDMEK3Br9RnTX5Z" 
                             title="YouTube video player" frameborder="0"
                             allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
                             referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
@@ -185,11 +183,11 @@
 
 
                 <!-- Video Card -->
-                <div class="video-card"
+                <div loading="lazy" class="video-card"
                     onclick="openVideo('https://www.youtube.com/embed/mutiE2YZbOs?si=xKISIt73SEgGREIR', 'Game Hacking Class 7','none' )">
                     <div class="thumbnail">
                         <iframe width="560" height="315"
-                            src="https://www.youtube.com/embed/mutiE2YZbOs?si=xKISIt73SEgGREIR" loading="lazy"
+                            src="https://www.youtube.com/embed/mutiE2YZbOs?si=xKISIt73SEgGREIR" 
                             title="YouTube video player" frameborder="0"
                             allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
                             referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
@@ -204,11 +202,11 @@
 
 
                 <!-- Video Card -->
-                <div class="video-card"
+                <div loading="lazy" class="video-card"
                     onclick="openVideo('https://www.youtube.com/embed/3Oe-dEvz6Fg?si=5atmxZ_sGcJ9ZiTW', 'Game Hacking Class 8','none' )">
                     <div class="thumbnail">
                         <iframe width="560" height="315"
-                            src="https://www.youtube.com/embed/3Oe-dEvz6Fg?si=5atmxZ_sGcJ9ZiTW" loading="lazy"
+                            src="https://www.youtube.com/embed/3Oe-dEvz6Fg?si=5atmxZ_sGcJ9ZiTW" 
                             title="YouTube video player" frameborder="0"
                             allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
                             referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
@@ -221,11 +219,11 @@
                 </div>
 
                 <!-- Video Card -->
-                <div class="video-card"
+                <div loading="lazy" class="video-card"
                     onclick="openVideo('https://www.youtube.com/embed/IRoc6Fuy79g?si=69L-T7FmjJHyVj50', 'Game Hacking Class 9','none' )">
                     <div class="thumbnail">
                         <iframe width="560" height="315"
-                            src="https://www.youtube.com/embed/IRoc6Fuy79g?si=69L-T7FmjJHyVj50" loading="lazy"
+                            src="https://www.youtube.com/embed/IRoc6Fuy79g?si=69L-T7FmjJHyVj50" 
                             title="YouTube video player" frameborder="0"
                             allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
                             referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
@@ -240,11 +238,11 @@
 
 
                 <!-- Video Card -->
-                <div class="video-card"
+                <div loading="lazy" class="video-card"
                     onclick="openVideo('https://www.youtube.com/embed/md6PkeYlOGc?si=-W-jr56wJGreswqz', 'Game Hacking Class 10','none' )">
                     <div class="thumbnail">
                         <iframe width="560" height="315"
-                            src="https://www.youtube.com/embed/md6PkeYlOGc?si=-W-jr56wJGreswqz" loading="lazy"
+                            src="https://www.youtube.com/embed/md6PkeYlOGc?si=-W-jr56wJGreswqz" 
                             title="YouTube video player" frameborder="0"
                             allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
                             referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
@@ -259,11 +257,11 @@
 
 
                 <!-- Video Card -->
-                <div class="video-card"
+                <div loading="lazy" class="video-card"
                     onclick="openVideo('https://www.youtube.com/embed/lmFClCHo_VI?si=EsDEv6FOoRsxstP9', 'Game Hacking Class 11','none' )">
                     <div class="thumbnail">
                         <iframe width="560" height="315"
-                            src="https://www.youtube.com/embed/lmFClCHo_VI?si=EsDEv6FOoRsxstP9" loading="lazy"
+                            src="https://www.youtube.com/embed/lmFClCHo_VI?si=EsDEv6FOoRsxstP9" 
                             title="YouTube video player" frameborder="0"
                             allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
                             referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
@@ -276,11 +274,11 @@
                 </div>
 
                 <!-- Video Card -->
-                <div class="video-card"
+                <div loading="lazy" class="video-card"
                     onclick="openVideo('https://www.youtube.com/embed/B0OAYOp2oQU?si=89lAGRd9rou4mj4H', 'Game Hacking Class 12','none' )">
                     <div class="thumbnail">
                         <iframe width="560" height="315"
-                            src="https://www.youtube.com/embed/B0OAYOp2oQU?si=89lAGRd9rou4mj4H" loading="lazy"
+                            src="https://www.youtube.com/embed/B0OAYOp2oQU?si=89lAGRd9rou4mj4H" 
                             title="YouTube video player" frameborder="0"
                             allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
                             referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
@@ -294,11 +292,11 @@
 
 
                 <!-- Video Card -->
-                <div class="video-card"
+                <div loading="lazy" class="video-card"
                     onclick="openVideo('https://www.youtube.com/embed/dHWpl2LAVEk?si=_n9BxwmrlCuUgd_X', 'Game Hacking Class 13','none' )">
                     <div class="thumbnail">
                         <iframe width="560" height="315"
-                            src="https://www.youtube.com/embed/dHWpl2LAVEk?si=_n9BxwmrlCuUgd_X" loading="lazy"
+                            src="https://www.youtube.com/embed/dHWpl2LAVEk?si=_n9BxwmrlCuUgd_X"
                             title="YouTube video player" frameborder="0"
                             allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
                             referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
@@ -312,11 +310,11 @@
 
 
                 <!-- Video Card -->
-                <div class="video-card"
+                <div loading="lazy" class="video-card"
                     onclick="openVideo('https://www.youtube.com/embed/_CWLRP_f1WY?si=nY4xjb_eBlhUFxke', 'Game Hacking Class 14','none' )">
                     <div class="thumbnail">
                         <iframe width="560" height="315"
-                            src="https://www.youtube.com/embed/_CWLRP_f1WY?si=nY4xjb_eBlhUFxke" loading="lazy"
+                            src="https://www.youtube.com/embed/_CWLRP_f1WY?si=nY4xjb_eBlhUFxke" 
                             title="YouTube video player" frameborder="0"
                             allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
                             referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
@@ -331,11 +329,11 @@
 
 
                 <!-- Video Card -->
-                <div class="video-card"
+                <div loading="lazy" class="video-card"
                     onclick="openVideo('https://www.youtube.com/embed/Ib9GsNLXz2w?si=JyvYnBbYZGBP6XdS', 'Game Hacking Class 15','none' )">
                     <div class="thumbnail">
                         <iframe width="560" height="315"
-                            src="https://www.youtube.com/embed/Ib9GsNLXz2w?si=JyvYnBbYZGBP6XdS" loading="lazy"
+                            src="https://www.youtube.com/embed/Ib9GsNLXz2w?si=JyvYnBbYZGBP6XdS" 
                             title="YouTube video player" frameborder="0"
                             allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
                             referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
@@ -350,11 +348,11 @@
 
 
                 <!-- Video Card -->
-                <div class="video-card"
+                <div loading="lazy" class="video-card"
                     onclick="openVideo('https://www.youtube.com/embed/grpZsh6rvqU?si=F15z6Bwrwm9D--Gv', 'Game Hacking Class 16','none' )">
                     <div class="thumbnail">
                         <iframe width="560" height="315"
-                            src="https://www.youtube.com/embed/grpZsh6rvqU?si=F15z6Bwrwm9D--Gv" loading="lazy"
+                            src="https://www.youtube.com/embed/grpZsh6rvqU?si=F15z6Bwrwm9D--Gv" 
                             title="YouTube video player" frameborder="0"
                             allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
                             referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
