--- a/assets/pages/courses-unreal-engine.html
+++ b/assets/pages/courses-unreal-engine.html
@@ -6,9 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>A.Owais khan - Courses</title>
     <link rel="icon" href="../images/me.jpg">
-    <link href='https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css' rel='stylesheet'>
     <link rel="stylesheet" href="../css/style.css">
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
 
 </head>
 
@@ -75,7 +73,7 @@
             <div class="video-grid">
 
                 <!-- Video Card  -->
-                <div class="video-card"
+                <div loading="lazy" class="video-card"
                     onclick="openVideo('https://www.youtube.com/embed/L9qixi858Ag?si=Tt2tqChF66OG29zc', 'Unreal Engine Class 1','none' )">
                     <div class="thumbnail">
                         <iframe width="560" height="315"
@@ -91,7 +89,7 @@
                     </div>
                 </div>
                 <!-- Video Card  -->
-                <div class="video-card"
+                <div loading="lazy" class="video-card"
                     onclick="openVideo('https://www.youtube.com/embed/bDUFB1ng00Q?si=jPml3vWyfH0mh0Bb', 'Unreal Engine Class 2','none' )">
                     <div class="thumbnail">
                         <iframe width="560" height="315"
@@ -107,7 +105,7 @@
                     </div>
                 </div>
                 <!-- Video Card  -->
-                <div class="video-card"
+                <div loading="lazy" class="video-card"
                     onclick="openVideo('https://www.youtube.com/embed/5VTtsEU6Dsw?si=nnI70rcZC7pf4n3z', 'Unreal Engine Class 3','none' )">
                     <div class="thumbnail">
                         <iframe width="560" height="315"
@@ -123,7 +121,7 @@
                     </div>
                 </div>
                 <!-- Video Card  -->
-                <div class="video-card"
+                <div loading="lazy" class="video-card"
                     onclick="openVideo('https://www.youtube.com/embed/nXOwczODahY?si=qWmSHBfgTJ-F2-EK', 'Unreal Engine Class 4','none' )">
                     <div class="thumbnail">
                         <iframe width="560" height="315"
@@ -139,7 +137,7 @@
                     </div>
                 </div>
                 <!-- Video Card  -->
-                <div class="video-card"
+                <div loading="lazy" class="video-card"
                     onclick="openVideo('https://www.youtube.com/embed/-GtqvZfuCSY?si=n5idXbAJISiPzWV8', 'Unreal Engine Class 5','none' )">
                     <div class="thumbnail">
                         <iframe width="560" height="315"
@@ -155,7 +153,7 @@
                     </div>
                 </div>
                 <!-- Video Card  -->
-                <div class="video-card"
+                <div loading="lazy" class="video-card"
                     onclick="openVideo('https://www.youtube.com/embed/19p7M8fvluo?si=s5PdTWPgyS0x7iUO', 'Unreal Engine Class 6','none' )">
                     <div class="thumbnail">
                         <iframe width="560" height="315"
@@ -171,7 +169,7 @@
                     </div>
                 </div>
                 <!-- Video Card  -->
-                <div class="video-card"
+                <div loading="lazy" class="video-card"
                     onclick="openVideo('https://www.youtube.com/embed/Sic_goW0bPQ?si=9LAg00x4ftaXn-GC', 'Unreal Engine Class 7','none' )">
                     <div class="thumbnail">
                         <iframe width="560" height="315"
@@ -187,7 +185,7 @@
                     </div>
                 </div>
                 <!-- Video Card  -->
-                <div class="video-card"
+                <div loading="lazy" class="video-card"
                     onclick="openVideo('https://www.youtube.com/embed/xmFNjkq-c-o?si=KDdKpC35DdWbyLMV', 'Unreal Engine Class 8','none' )">
                     <div class="thumbnail">
                         <iframe width="560" height="315"
@@ -203,11 +201,11 @@
                     </div>
                 </div>
                 <!-- Video Card  -->
-                <div class="video-card"
+                <div loading="lazy" class="video-card"
                     onclick="openVideo('https://www.youtube.com/embed/ZHppYUsZLpA?si=PEVhTdcr7RqwPMn4', 'Unreal Engine Class 9','none' )">
                     <div class="thumbnail">
                         <iframe width="560" height="315"
-                            src="https://www.youtube.com/embed/ZHppYUsZLpA?si=PEVhTdcr7RqwPMn4" loading="lazy"
+                            src="https://www.youtube.com/embed/ZHppYUsZLpA?si=PEVhTdcr7RqwPMn4" 
                             title="YouTube video player" frameborder="0"
                             allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
                             referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
@@ -219,11 +217,11 @@
                     </div>
                 </div>
                 <!-- Video Card  -->
-                <div class="video-card"
+                <div loading="lazy" class="video-card"
                     onclick="openVideo('https://www.youtube.com/embed/8Hm4JirJmk8?si=l2E5jeMJIbRzq_sl', 'Unreal Engine Class 10','none' )">
                     <div class="thumbnail">
                         <iframe width="560" height="315"
-                            src="https://www.youtube.com/embed/8Hm4JirJmk8?si=l2E5jeMJIbRzq_sl" loading="lazy"
+                            src="https://www.youtube.com/embed/8Hm4JirJmk8?si=l2E5jeMJIbRzq_sl" 
                             title="YouTube video player" frameborder="0"
                             allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
                             referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
@@ -235,11 +233,11 @@
                     </div>
                 </div>
                 <!-- Video Card  -->
-                <div class="video-card"
+                <div loading="lazy" class="video-card"
                     onclick="openVideo('https://www.youtube.com/embed/P5z6vRGGl8g?si=tgyqrHEbORQIHSbc', 'Unreal Engine Class 11','none' )">
                     <div class="thumbnail">
                         <iframe width="560" height="315"
-                            src="https://www.youtube.com/embed/P5z6vRGGl8g?si=tgyqrHEbORQIHSbc" loading="lazy"
+                            src="https://www.youtube.com/embed/P5z6vRGGl8g?si=tgyqrHEbORQIHSbc" 
                             title="YouTube video player" frameborder="0"
                             allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
                             referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
@@ -251,11 +249,11 @@
                     </div>
                 </div>
                 <!-- Video Card  -->
-                <div class="video-card"
+                <div loading="lazy" class="video-card"
                     onclick="openVideo('https://www.youtube.com/embed/8Q1tupS8npY?si=4I4HuefYepxBW9c-', 'Unreal Engine Class 12','none' )">
                     <div class="thumbnail">
                         <iframe width="560" height="315"
-                            src="https://www.youtube.com/embed/8Q1tupS8npY?si=4I4HuefYepxBW9c-" loading="lazy"
+                            src="https://www.youtube.com/embed/8Q1tupS8npY?si=4I4HuefYepxBW9c-" 
                             title="YouTube video player" frameborder="0"
                             allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
                             referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
@@ -267,11 +265,11 @@
                     </div>
                 </div>
                 <!-- Video Card  -->
-                <div class="video-card"
+                <div loading="lazy" class="video-card"
                     onclick="openVideo('https://www.youtube.com/embed/rTNkIrQ0xHM?si=RAbTUAJjNBIeLQDO', 'Unreal Engine Class 13','none' )">
                     <div class="thumbnail">
                         <iframe width="560" height="315"
-                            src="https://www.youtube.com/embed/rTNkIrQ0xHM?si=RAbTUAJjNBIeLQDO" loading="lazy"
+                            src="https://www.youtube.com/embed/rTNkIrQ0xHM?si=RAbTUAJjNBIeLQDO" 
                             title="YouTube video player" frameborder="0"
                             allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
                             referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
@@ -283,11 +281,11 @@
                     </div>
                 </div>
                 <!-- Video Card  -->
-                <div class="video-card"
+                <div loading="lazy" class="video-card"
                     onclick="openVideo('https://www.youtube.com/embed/UQWz7A5_vpI?si=rj-P9qG-vA8csmAa', 'Unreal Engine Class 14','none' )">
                     <div class="thumbnail">
                         <iframe width="560" height="315"
-                            src="https://www.youtube.com/embed/UQWz7A5_vpI?si=rj-P9qG-vA8csmAa" loading="lazy"
+                            src="https://www.youtube.com/embed/UQWz7A5_vpI?si=rj-P9qG-vA8csmAa" 
                             title="YouTube video player" frameborder="0"
                             allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
                             referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
@@ -299,11 +297,11 @@
                     </div>
                 </div>
                 <!-- Video Card  -->
-                <div class="video-card"
+                <div loading="lazy" class="video-card"
                     onclick="openVideo('https://www.youtube.com/embed/FQQy2tLncpE?si=LaDVVD7K_b242QC3', 'Unreal Engine Class 15','none' )">
                     <div class="thumbnail">
                         <iframe width="560" height="315"
-                            src="https://www.youtube.com/embed/FQQy2tLncpE?si=LaDVVD7K_b242QC3" loading="lazy"
+                            src="https://www.youtube.com/embed/FQQy2tLncpE?si=LaDVVD7K_b242QC3" 
                             title="YouTube video player" frameborder="0"
                             allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
                             referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
@@ -315,11 +313,11 @@
                     </div>
                 </div>
                 <!-- Video Card  -->
-                <div class="video-card"
+                <div loading="lazy" class="video-card"
                     onclick="openVideo('https://www.youtube.com/embed/UodxiWRtEwE?si=WB24kmDoa5YR0p_q', 'Unreal Engine Class 16','none' )">
                     <div class="thumbnail">
                         <iframe width="560" height="315"
-                            src="https://www.youtube.com/embed/UodxiWRtEwE?si=WB24kmDoa5YR0p_q" loading="lazy"
+                            src="https://www.youtube.com/embed/UodxiWRtEwE?si=WB24kmDoa5YR0p_q" 
                             title="YouTube video player" frameborder="0"
                             allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
                             referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
@@ -331,11 +329,11 @@
                     </div>
                 </div>
                 <!-- Video Card  -->
-                <div class="video-card"
+                <div loading="lazy" class="video-card"
                     onclick="openVideo('https://www.youtube.com/embed/htS5XBFm2w0?si=fkfFEPw6CfjlZ58S', 'Unreal Engine Class 17','none' )">
                     <div class="thumbnail">
                         <iframe width="560" height="315"
-                            src="https://www.youtube.com/embed/htS5XBFm2w0?si=fkfFEPw6CfjlZ58S" loading="lazy"
+                            src="https://www.youtube.com/embed/htS5XBFm2w0?si=fkfFEPw6CfjlZ58S" 
                             title="YouTube video player" frameborder="0"
                             allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
                             referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
@@ -347,11 +345,11 @@
                     </div>
                 </div>
                 <!-- Video Card  -->
-                <div class="video-card"
+                <div loading="lazy" class="video-card"
                     onclick="openVideo('https://www.youtube.com/embed/-EfwF0WgKbs?si=3p901g9nTd1-PPgs', 'Unreal Engine Class 18','none' )">
                     <div class="thumbnail">
                         <iframe width="560" height="315"
-                            src="https://www.youtube.com/embed/-EfwF0WgKbs?si=3p901g9nTd1-PPgs" loading="lazy"
+                            src="https://www.youtube.com/embed/-EfwF0WgKbs?si=3p901g9nTd1-PPgs" 
                             title="YouTube video player" frameborder="0"
                             allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
                             referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
@@ -363,11 +361,11 @@
                     </div>
                 </div>
                 <!-- Video Card  -->
-                <div class="video-card"
+                <div loading="lazy" class="video-card"
                     onclick="openVideo('https://www.youtube.com/embed/YBNUC6GD5ho?si=WXKN3S9EoKIPptbb', 'Unreal Engine Class 19','none' )">
                     <div class="thumbnail">
                         <iframe width="560" height="315"
-                            src="https://www.youtube.com/embed/YBNUC6GD5ho?si=WXKN3S9EoKIPptbb" loading="lazy"
+                            src="https://www.youtube.com/embed/YBNUC6GD5ho?si=WXKN3S9EoKIPptbb" 
                             title="YouTube video player" frameborder="0"
                             allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
                             referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
@@ -379,11 +377,11 @@
                     </div>
                 </div>
                 <!-- Video Card  -->
-                <div class="video-card"
+                <div loading="lazy" class="video-card"
                     onclick="openVideo('https://www.youtube.com/embed/lhGweZQIQ6s?si=9duwzKUX3SrOq7za', 'Unreal Engine Class 20','none' )">
                     <div class="thumbnail">
                         <iframe width="560" height="315"
-                            src="https://www.youtube.com/embed/lhGweZQIQ6s?si=9duwzKUX3SrOq7za" loading="lazy"
+                            src="https://www.youtube.com/embed/lhGweZQIQ6s?si=9duwzKUX3SrOq7za" 
                             title="YouTube video player" frameborder="0"
                             allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
                             referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
@@ -395,11 +393,11 @@
                     </div>
                 </div>
                 <!-- Video Card  -->
-                <div class="video-card"
+                <div loading="lazy" class="video-card"
                     onclick="openVideo('https://www.youtube.com/embed/l5koWzwSPCY?si=WHPepm6lePquOg4r', 'Unreal Engine Class 21','none' )">
                     <div class="thumbnail">
                         <iframe width="560" height="315"
-                            src="https://www.youtube.com/embed/l5koWzwSPCY?si=WHPepm6lePquOg4r" loading="lazy"
+                            src="https://www.youtube.com/embed/l5koWzwSPCY?si=WHPepm6lePquOg4r" 
                             title="YouTube video player" frameborder="0"
                             allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
                             referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
