--- a/assets/pages/documentation.html
+++ b/assets/pages/documentation.html
@@ -6,6 +6,7 @@
   <title>Documentation</title>
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="stylesheet" href="../css/style.css">
+    <link rel="icon" href="../images/me.jpg">
 
 </head>
 
